--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,28 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  background-color: #1d1d1d; color: aliceblue; font-family: 'Open Sans', sans-serif; transition: all 0.3s;
+} 
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+#sun.hide {display: none;} #moon {display: none;}
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+#moon.active {display: block;}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+body.light { background-color: #f5f5f5; color: #1d1d1d;}
+
+body.light .top-icon {color: #1d1d1d;}
+
+body.light .profile-section input, body.light .profile-section textarea, body.light .profile-section select  {
+  box-shadow: rgba(0, 0, 0, 0.091) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px; }
+
+.profile-section input, .profile-section textarea, .profile-section select, .logo-place { box-shadow: rgba(0, 0, 0, 0.247) 0px 6px 24px 0px, rgba(186, 180, 4, 0.236) 0px 0px 0px 1px;}
+
+body.light .logo-place { background-color: #f5f5f5; box-shadow: rgba(0, 0, 0, 0.091) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;}
+
+body.light .profile-section label { color: #000; }
+
+body.light #upload-label { color: white;}
